@@ -1,2 +1,3 @@
 #
 from checkboxwidget import CheckBoxWidget
+from checkboxwidget import DisabledCheckBoxWidget
